# 3dgrut

./: .clang-format  .gitattributes  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Dockerfile  NHT_PARITY_HANDOFF.md  README.md  TODO.md  TODO_half_3dgrt.md  TODO_nht_cuda.md  activate_env.sh  antialiasing.py  background.py  build_visualization.ps1  build_visualization.sh  check_gradients.py  colmap.sh  compare.sh  compute_psnr.py  convert.py  convert.sh  create_mask.py  debug.py  error.py  eval_utils.py  extra_info_extractor.sh  formatter.sh  gaussian_trace_playground.py  geometry.py  gui.py  install_env.ps1  install_env.sh  install_env_uv.ps1  install_env_uv.sh  loss_utils.py  make_grid_search_configs.py  model.py  packed_ops_modules.py  pixi.toml  (+32 more)
.cursor/rules/: formatter-defaults.mdc
.github/workflows/: ci.yaml
benchmark/: mipnerf360.sh  mipnerf360_ncore.sh  nerf_synthetic.sh  profile_dataloader.py  scannetpp.sh  zipnerf.sh  zipnerf_render.sh
configs/: base.yaml  base_gs.yaml  nerf_synthetic.yaml  sky_mlp.yaml
configs/apps/: colmap.yaml  colmap_3dgrt.yaml  colmap_3dgrt_mcmc.yaml  colmap_3dgrt_mcmc_nht.yaml  colmap_3dgut.yaml  colmap_3dgut_mcmc.yaml  colmap_3dgut_mcmc_nht.yaml  colmap_3dgut_robotics_ppisp_mcmc.yaml  colmap_dense_sampling.yaml  colmap_test_ingp.yaml  colmap_train_ingp.yaml  cusfm_3dgut.yaml  cusfm_3dgut_mcmc.yaml  ncore.yaml  ncore_3dgrt.yaml  ncore_3dgrt_mcmc.yaml  ncore_3dgut.yaml  ncore_3dgut_mcmc.yaml  ncore_sky_mlp.yaml  nerf_synthetic.yaml  nerf_synthetic_3dgrt_mcmc.yaml  nerf_synthetic_3dgrt_mcmc_nht.yaml  nerf_synthetic_3dgut.yaml  nerf_synthetic_3dgut_mcmc.yaml  nerf_synthetic_3dgut_mcmc_nht.yaml  nerf_synthetic_test_ingp.yaml  nerf_synthetic_train_ingp.yaml  ngp.yaml  ngp_sky-mlp.yaml  ngp_sky_mlp.yaml  ngp_sky_mlp_init_aux.yaml  scannetpp_3dgrt.yaml  scannetpp_3dgrt_mcmc.yaml  scannetpp_3dgut.yaml  scannetpp_3dgut_mcmc.yaml  scivis_3dgut_gs.yaml  scivis_3dgut_mcmc.yaml  test_ingp.yaml  train_ingp.yaml
configs/background/: sky_mlp.yaml
configs/dataset/: colmap.yaml  ncore.yaml  nerf.yaml  ngp.yaml  scannetpp.yaml
configs/initialization/: accumulated_point_cloud.yaml  auxiliary.yaml  colmap.yaml  fused_point_cloud.yaml  lidar.yaml  point_cloud.yaml  random.yaml
configs/render/: 3dgrt.yaml  3dgut.yaml
configs/strategy/: mcmc.yaml
datasets/: __init__.py  colmap_dataset.py  colmap_utils.py  ncore_dataset.py  ncore_utils.py  nerf_dataset.py  nerf_utils.py  ngp_dataset.py  ngp_utils.py  utils.py
docs/: ppisp-controller-export-plan.md  ppisp-to-rtx-pp-plan.md  ppsip-to-rtx-pp-plan.md
glfwviewer/: README.md  __init__.py  bbox_panel.py  camera.py  exporter.py  gplayground.py  hud.py  interaction.py  render_loop.py  scene_state.py  shaders.py  utils.py  viewer.py  window.py
libs/optixtracer/: __init__.py  ops.py
libs/packed_ops/: .gitignore  BUILD.bazel  __init__.py  binding.cpp  packed_operations.cu  packed_operations_test.py  setup.py  utils.h
libs/ray_utils/: CMakeLists.txt  __init__.py  ray_utils.cpp  setup.py
models/: __init__.py  antialiasing.py  background.py  geometry.py  model.py  packed_ops_modules.py  render_utils.py
ngc/: Dockerfile  Dockerfile.build  README.md  app.py  ngc_post_job.sh  ngc_pre_job.sh  ngc_prepare.sh
ngc/ngc_config/: 3dgrt.toml
notebooks/: gmethods_compare.ipynb
plan/: nht_bwd_reg_reduction.md  nht_correction_plan.md  nht_reference_results.md
playground/: download_assets.sh  engine.py  playground.py
playground/src/: hybridTracer.cpp
playground/utils/: mesh_io.py  video_out.py
preprocessing/: colmap.sh  optimized.txt  run.sh  run_cubemap.sh  step1-o2s.py  step2-s2o.py  step3-o2f.py  step4-dilate.py
preprocessing/16/: mask_frames_fast.py  pano_camera.py  pano_camera_fast.py  pano_masks_reverse_fast.py
preprocessing/6/: mask_frames.py  pano_camera.py  pano_masks_reverse.py
preprocessing/lib/: cam_utils.py
preprocessing/perspective-16/: bbox.py  mask_frames.py  pano_masks_reverse.py
preprocessing/rig/: rig.sh
scripts/: check_gradients.py  create_conda.sh  create_venv_cuda.sh  cuda_helper.ps1  cuda_helper.sh  gaussian_trace_playground.py  install_slangc.ps1  install_slangc.sh  install_tinycudann.ps1  install_tinycudann.sh  persist_env_vars_in_venv.ps1  persist_env_vars_in_venv.sh  playground.py  rebase_helper.sh  result_parser.py  test_kaolin_pytorch_abi.sh
scripts/benchmark/: mipnerf360_nht.sh  profile_dataloader.py  scannetpp.sh
tests/: conftest.py  test_infrastructure.py
threedgrt_tracer/: bindings.cpp  setup_3dgrt.py  tracer.py
threedgrt_tracer/src/: optixTracer.cpp  particlePrimitives.cu
threedgrut/: __init__.py  render.py  trainer.py
threedgrut/datasets/: __init__.py  camera_models.py  colmap_gsplat.py  datasetNcore.py  dataset_colmap.py  dataset_nerf.py  dataset_scannetpp.py  ncoreAdapter.py  ncoreUtils.py  protocols.py  utils.py
threedgrut/export/: README.md  __init__.py  accessor.py  adapter.py  base.py  edit_nurec.py  ingp_exporter.py  normalizing_transform.py  nurec_templates.py  partition.py  ply_exporter.py  sh_rotation.py  transforms.py  usd_util.py  (+1 more)
threedgrut_playground/: README.md  bindings.cpp  engine.py  ps_gui.py  requirements.txt  setup_playground.py  tracer.py  viser_gui.py
threedgut_tracer/: bindings.cpp  setup_3dgut.py  tracer.py
tools/: nht_step2_parity.py
utils/: color.py  gui.py  misc.py  recorder.py  tests.py
visualization/: CMakeLists.txt  build_visualization.ps1  ckpt_to_ply.py  convert.py  pyproject.toml
visualization/gaussian_viewer/: __init__.py  _launchers.py  example_polyscope.py  polyscope_viewer.py
visualization/python/: example_polyscope.py
visualization/python/gaussian_renderer/: __init__.py  example_polyscope.py
visualization/src/: CMakeLists.txt  InteractiveViewer.cpp  commandline_viewer.cpp  gaussian_common.h  interactive_viewer.cpp  python_bindings.cpp  renderer_core.cpp  renderer_core.h
visualization/src/gaussian_viewer/: CMakeLists.txt  GaussianViewer.cpp  InteractiveViewer.cpp  gaussian_common.h  python_bindings.cpp  renderer_core.cpp  renderer_core.h
visualization/src/gaussian_viewer/glad/include/glad/: gl.h
(+251 files in other folders)
