# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "threedgrut"
version = "0.0.1"
description = "Official implementation of 3DGRT and 3DGUT"
requires-python = ">=3.11"
dependencies = [
    "plyfile",
    "torchmetrics",
    "tensorboard",
    "fire",
    "omegaconf",
    "hydra-core",
    "scikit-learn",
    "wandb",
    "polyscope>=2.3.0",
    "addict",
    "rich",
    "slangtorch==1.3.4",
    "piexif",
    "kornia",
    "opencv-python<4.12.0",
    "einops",
    "imageio",
    "msgpack",
    "dataclasses_json",
    "setuptools<72.1.0",
    "tqdm",
    "libigl",
    "pygltflib",
    "usd-core",
    "viser",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["threedgrut*", "threedgrt_tracer*", "threedgut_tracer*", "threedgrut_playground*"]
exclude = ["thirdparty*", ".venv*"]
