# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["setuptools==78.1.1"]
build-backend = "setuptools.build_meta"

[project]
name = "threedgrut"
version = "0.0.2"
description = "Official implementation of 3DGRT and 3DGUT"
requires-python = ">=3.11"

dependencies = [
    "setuptools==78.1.1",
    "pillow",
    "ninja",
    "plyfile",
    "torchmetrics",
    "addict",
    "dataclasses_json",
    "einops",
    "fire",
    "hydra-core",
    "imageio",
    "kornia",
    "msgpack",
    "numpy",
    "omegaconf",
    "opencv-python",
    "piexif",
    "rich",
    "scikit-learn",
    "tensorboard",
    "torch",
    "torchvision",
    "tqdm",
    "wandb",
    "simplejpeg",
    "nvidia-ncore==18.6.0",
    # # slangtorch on amd64 only
    # "slangtorch==1.3.18; sys_platform == 'linux' and platform_machine == 'x86_64'",
    # usd-core only available for amd64
    "usd-core>=26.3; sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[project.optional-dependencies]
dev = [
    "black==26.3.1",
    "isort==5.13.0",
]
gui = [
    "libigl",
    "polyscope>=2.3.0",
    "viser",
]
playground = [
    "pygltflib",
    "kaolin>=0.17.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["threedgrut*", "threedgrt_tracer*", "threedgut_tracer*", "threedgrut_playground*"]
exclude = ["thirdparty*", ".venv*"]

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
torchmetrics = { index = "pypi" }
setuptools = { index = "pypi" }
ninja = { index = "pypi" }

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

# NOTE: we intentionally do not include the PyTorch index here because it is already set externally
# by the UV_INDEX environment variable
# [[tool.uv.index]]
# name = "pytorch"
# url = "https://download.pytorch.org/whl"
