# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["setuptools==78.1.1"]
build-backend = "setuptools.build_meta"

[project]
name = "threedgrut"
version = "1.1.0"
description = "Official implementation of 3DGRT and 3DGUT"
authors = [
    { name = "Nicolas Moenne-Loccoz, et al.", email = "nicolasm@nvidia.com" },
]
requires-python = ">=3.11"
classifiers = [
    "Operating System :: OS Independent",
]

dependencies = [
    "setuptools==78.1.1",
    "pillow",
    "ninja",
    "plyfile",
    "torchmetrics",
    "addict",
    "dataclasses_json",
    "einops",
    "fire",
    "hydra-core",
    "imageio",
    "kornia",
    "msgpack",
    "numpy",
    "omegaconf",
    "opencv-python",
    "piexif",
    "pytest",
    "rich",
    "scikit-learn",
    "tensorboard",
    "torch",
    "torchvision",
    "tqdm",
    "wandb",
    "simplejpeg",
    "nvidia-ncore>=19.0.0",
    # # slangtorch on amd64 only
    # "slangtorch==1.3.18; sys_platform == 'linux' and platform_machine == 'x86_64'",
    # usd-core only available for amd64
    "usd-core>=26.5; sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[project.optional-dependencies]
dev = [
    "black==26.3.1",
    "isort==5.13.0",
    "clang-format==18.1.8",
]
gui = [
    "polyscope>=2.6.0",
    "viser",
]
playground = [
    "pygltflib",
    "kaolin>=0.17.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
# torch.utils.cpp_extension.load compiles the tracers at runtime, so the wheel must
# ship their C++/CUDA sources and the tiny-cuda-nn headers they include: common.h,
# common_host.h, cpp_api.h, vec.h, and the fmt/json/pybind11_json deps.
"threedgut_tracer" = ["include/**/*", "src/**/*", "*.cpp"]
"threedgrt_tracer" = ["include/**/*", "src/**/*", "*.cpp"]
"thirdparty" = [
  "tiny-cuda-nn/include/tiny-cuda-nn/common.h",
  "tiny-cuda-nn/include/tiny-cuda-nn/common_host.h",
  "tiny-cuda-nn/include/tiny-cuda-nn/cpp_api.h",
  "tiny-cuda-nn/include/tiny-cuda-nn/vec.h",
  "tiny-cuda-nn/dependencies/fmt/include/**/*",
  "tiny-cuda-nn/dependencies/json/**/*",
  "tiny-cuda-nn/dependencies/pybind11_json/**/*",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["threedgrut*", "threedgrt_tracer*", "threedgut_tracer*", "threedgrut_playground*", "thirdparty*"]
exclude = [".venv*"]

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
torchmetrics = { index = "pypi" }
setuptools = { index = "pypi" }
ninja = { index = "pypi" }

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

# NOTE: we intentionally do not include the PyTorch index here because it is already set externally
# by the UV_INDEX environment variable
# [[tool.uv.index]]
# name = "pytorch"
# url = "https://download.pytorch.org/whl"

[tool.black]
target-version = ["py311"]
line-length = 120
extend-exclude = '''
/(
  ^/thirdparty/tiny-cuda-nn
)/
'''

[tool.isort]
skip_gitignore = true
profile = "black"
